--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-image-gallery": "^0.9.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-touch-loader": "^1.1.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1"
   },
