--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-avatar-editor": "^12.0.0-beta.0",
@@ -15,7 +16,8 @@
     "react-scripts": "3.2.0",
     "react-touch-loader": "^1.1.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "ws": "^7.2.0"
   },
   "scripts": {
     "start": "cross-env PORT=8888  react-scripts start",
